LDEV-4366 Prototype Kumalive front and back ends

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -90,6 +90,7 @@ index.addlesson  =Add Lesson
 index.monitor  =Monitor
 index.participate  =Participate
 index.dummymonitor  =Dummy Monitor
+index.kumalive =Kumalive
 title.import.result  =Import tool content result
 title.import  =Import tool content
 title.import.instruction  =Please choose LAMS sequence to import.
