--- a/lams_tool_larsrc/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_larsrc/conf/language/lams/ApplicationResources.properties
@@ -65,7 +65,7 @@ error.msg.invaid.param.upload  =InvalidParameterException occured while trying t
 error.msg.repository  =A repository error occurred while trying to upload the file.
 error.msg.default.content.not.find  =Could not retrieve default content record for this tool.
 msg.no.instruction  =No instructions available.
-msg.del.confirmation =Are you sure you want to delete this file?
+del.confirmation =Are you sure you want to delete this file?
 authoring.msg.cancel.save  =Do you want to close this window without saving?
 label.learning.title  =Share Resource Learning
 label.learning.heading  =Share Resources
