--- a/lams_tool_larsrc/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_larsrc/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = shareresources
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Mar 02 01:28:44 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Jun 28 23:26:18 CST 2017 
  
 #=================== labels for ShareResources =================# 
 
@@ -65,7 +65,6 @@ error.msg.invaid.param.upload  =InvalidParameterException occured while trying t
 error.msg.repository  =A repository error occurred while trying to upload the file.
 error.msg.default.content.not.find  =Could not retrieve default content record for this tool.
 msg.no.instruction  =No instructions available.
-del.confirmation =Are you sure you want to delete this file?
 authoring.msg.cancel.save  =Do you want to close this window without saving?
 label.learning.title  =Share Resource Learning
 label.learning.heading  =Share Resources
@@ -94,7 +93,6 @@ monitoring.label.hidden  =Hidden
 label.monitoring.edit.activity.cancel  =Cancel
 label.monitoring.edit.activity.update  =Update
 label.monitoring.edit.activity.edit  =Edit
-message.monitoring.edit.activity.not.editable  =This activity is no longer editable
 export.label.resource  =Resource
 export.label.no.learning.object  =No offline package available
 export.init.resource  =Initial resources
@@ -173,8 +171,11 @@ label.authoring.advanced.notify.onfileupload  =Notify instructors when a learner
 event.file.upload  ={0} uploaded a file \"{1}\"
 label.upload.info  =Uploaded file must not be executable and not exceed size of {0}
 error.file.type.zip  =File must be a zip file.
-label.enable.rating=Enable Rating
-label.rating=Rating
+label.enable.rating  =Enable Rating
+label.rating  =Rating
 label.average.rating  =Average rating {0}/{1} votes
 label.your.rating  =Your rating {0}, average rating {1}/{2} votes
-#======= End labels: Exported 166 labels for en AU =====
+del.confirmation  =Are you sure you want to delete this resource?
+
+
+#======= End labels: Exported 170 labels for en AU =====
