--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -91,6 +91,8 @@ index.monitor  =Monitor
 index.participate  =Participate
 index.dummymonitor  =Dummy Monitor
 index.kumalive =Kumalive
+index.kumalive.tooltip =Enter a live lesson
+index.kumalive.enter.learner =Enter as a learner
 title.import.result  =Import tool content result
 title.import  =Import tool content
 title.import.instruction  =Please choose LAMS sequence to import.
