--- a/lams_learning/conf/language/lams/ApplicationResources.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources.properties
@@ -108,5 +108,26 @@ mynotes.add.new.current.lesson.button  =Add note this lesson
 label.group.confirm.header  =Confirm group selection
 label.group.confirm.button  =Confirm
 label.group.confirm.areyoujoining  =Are you joining
-
+label.kumalive.title =Kumalive:
+label.kumalive.wait.start =Wait for a teacher to start Kumalive
+label.kumalive.name.enter =Enter a name for a new Kumalive
+button.kumalive.create =Create
+button.kumalive.finish.kumalive =Finish Kumalive
+button.kumalive.ask =Ask a question
+button.kumalive.finish.question =Finish question
+button.kumalive.raise =Raise hand
+button.kumalive.putdown =Put hand down
+label.kumalive.raised.hands =Raised hands
+label.kumalive.learners =Learners
+label.kumalive.teacher =Teacher
+label.kumalive.finish.speak =Finish speaking
+label.kumalive.mark =Mark learner:
+label.kumalive.mark.great =Great!
+label.kumalive.mark.ok =Just OK
+label.kumalive.mark.bad =Not so good
+label.kumalive.mark.cancel =Do not mark
+message.kumalive.finish.kumalive =Kumalive is finished. The window will close.
+message.kumalive.finish.kumalive.confirm =Are you sure you want to finish this Kumalive?
+message.kumalive.speak.not.raised.hand =Do you want to make a speaker a learner who did not raise hand?
+label.kumalive.closed =You have got no connection with Kumalive. Try closing this window and opening it again.
 #======= End labels: Exported 102 labels for en AU =====
