LDEV-4371 Allow always keeping learner posts in Forum

--- a/lams_tool_forum/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources.properties
@@ -244,6 +244,10 @@ js.error.validate.reply.number  =There is an error with the minimum and/or maxim
 label.topics  =Topics
 label.authoring.basic.resource.file.input  =File
 message.monitoring.edit.activity.not.editable  =Activity cannot longer be editted
-
+admin.page.title  =Forum Settings
+admin.success  =Configuration successfully saved.
+admin.return  =Return to maintain LAMS
+admin.button.save  =Save
+admin.keep.learner.content =Never delete learner added posts
 
 #======= End labels: Exported 238 labels for en AU =====
